src/components/SharedLayout/SharedLayout.module.scss
.wrapper {
}

.navBar {
  background-color: color(background, base);
  position: fixed;
  z-index: 9999;
  top: 0px;
  left: 0px;
  right: 0px;
  padding: 0 1rem;
  height: 60px;
  // transition: opacity 250ms;
  // will-change: transform;
  ul {
    display: flex;
    align-items: center;
  }
  li {
    list-style: none;
    // margin: 0 0.5rem;
  }
  a {
    text-decoration: none;
    color: color(white, tan);
    font-size: 1rem;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
  }
}

.innerNav {
  // display: flex;
  // justify-content: space-around;
  // align-items: center;
  // width: 100%;
}

.navButton {
  // text-overflow: ellipsis;
  // white-space: nowrap;
  padding: 0.5rem 1rem;
  display: block;
  margin: 0;
  border: none;
  background: transparent;
  cursor: pointer;
  color: color(light, base);
  text-align: left;
  &:focus {
    outline: 2px solid color(light, base);
    outline-offset: 2px;
  }
}

.active {
  color: color(light, base);
  text-align: left;
  padding: 0.5rem 1rem;
  font-weight: 700;
  text-decoration: underline;
}

.footer {
  position: fixed;
  bottom: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 10vh;
  background-color: color(darks, base);
}

.footerLogo {
}

.footerIcons {
  display: flex;
  justify-content: space-around;

  a {
    padding: 0.5rem;
  }
}

